[gd_scene load_steps=27 format=3 uid="uid://bkv74b18figfa"]

[ext_resource type="Script" path="res://scripts/weapons/katana.gd" id="1_60t3y"]
[ext_resource type="PackedScene" uid="uid://c6d3xfvcu8km3" path="res://levels/weapons/sword.glb" id="2_ekvaw"]
[ext_resource type="AudioStream" uid="uid://dcak2f6e7fmow" path="res://sounds/weapon/drawKnife2.ogg" id="3_lu2yu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mvl4y"]
size = Vector3(0.1, 1.2, 0.3)

[sub_resource type="Animation" id="Animation_icj4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_igbia"]
resource_name = "attack"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_0e3d3"]
resource_name = "attack_sword_1"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.39626, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/sword")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_igjd8"]
resource_name = "attack_sword_2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1.86607),
"update": 0,
"values": [Vector3(-0.698132, -1.5708, 0), Vector3(-2.0944, 0.698132, 0)]
}
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/sword")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0.707, 0, 0.707)

[sub_resource type="Animation" id="Animation_k5nwl"]
resource_name = "attack_sword_3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 0.378929),
"update": 0,
"values": [Vector3(-0.349066, 1.5708, 0), Vector3(-1.74533, -1.5708, 0)]
}
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/sword")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, -0.707, 0, 0.707, 0.4, 1, 0, -0.383, 0, 0.924)

[sub_resource type="Animation" id="Animation_7gy7s"]
resource_name = "attack_sword_4"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1.86607, 1, 1),
"update": 0,
"values": [Vector3(0, -1.15192, 0), Vector3(-0.698132, -1.5708, 0), Vector3(-1.39626, 0.436332, 0), Vector3(0, 0.698132, 0), Vector3(0, -1.15192, 0)]
}
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/sword")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.3, 1, 0, 0.707, 0, 0.707, 0.6, 1, 0, 0, 0, 1, 0.7, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_43xne"]
resource_name = "attack_sword_5"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1.86607, 1, 1),
"update": 0,
"values": [Vector3(0, 1.15192, 0), Vector3(-0.698132, 1.5708, 0), Vector3(-0.959931, 0.698132, 0), Vector3(-1.39626, -0.436332, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/sword")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.3, 1, 0, -0.707, 0, 0.707, 0.6, 1, 0, -0.383, 0, 0.924, 0.7, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_fqvwb"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(0.2, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8jcg5"]
resource_name = "recover"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.141986, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(0.2, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.141986, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xul54"]
_data = {
"RESET": SubResource("Animation_icj4a"),
"attack": SubResource("Animation_igbia"),
"attack_sword_1": SubResource("Animation_0e3d3"),
"attack_sword_2": SubResource("Animation_igjd8"),
"attack_sword_3": SubResource("Animation_k5nwl"),
"attack_sword_4": SubResource("Animation_7gy7s"),
"attack_sword_5": SubResource("Animation_43xne"),
"idle": SubResource("Animation_fqvwb"),
"recover": SubResource("Animation_8jcg5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dk2k5"]
animation = &"attack_sword_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bxjcn"]
animation = &"attack_sword_3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ogv8"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uruel"]
animation = &"recover"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qwkj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dvbj6"]
xfade_time = 0.05

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rugre"]
xfade_time = 0.05
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bi06e"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sojof"]
xfade_time = 0.05

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m5gjn"]
xfade_time = 0.05
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pwjax"]
states/Start/position = Vector2(199, 100)
states/attack_sword_2/node = SubResource("AnimationNodeAnimation_dk2k5")
states/attack_sword_2/position = Vector2(769, 187)
states/attack_sword_3/node = SubResource("AnimationNodeAnimation_bxjcn")
states/attack_sword_3/position = Vector2(609, 324)
states/idle/node = SubResource("AnimationNodeAnimation_4ogv8")
states/idle/position = Vector2(405, 57)
states/recover/node = SubResource("AnimationNodeAnimation_uruel")
states/recover/position = Vector2(382, 193)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_qwkj3"), "idle", "attack_sword_2", SubResource("AnimationNodeStateMachineTransition_dvbj6"), "attack_sword_2", "recover", SubResource("AnimationNodeStateMachineTransition_rugre"), "recover", "idle", SubResource("AnimationNodeStateMachineTransition_bi06e"), "recover", "attack_sword_3", SubResource("AnimationNodeStateMachineTransition_sojof"), "attack_sword_3", "idle", SubResource("AnimationNodeStateMachineTransition_m5gjn")]
graph_offset = Vector2(118, 13)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_0w63t"]

[node name="katana" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151759, 0)
script = ExtResource("1_60t3y")

[node name="hand" type="Node3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="sword" parent="hand" instance=ExtResource("2_ekvaw")]

[node name="Area3D" type="Area3D" parent="hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.803239, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hand/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18153, 0)
shape = SubResource("BoxShape3D_mvl4y")

[node name="RigidBody3D" type="RigidBody3D" parent="hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.817238, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hand/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.147949, 0)
shape = SubResource("BoxShape3D_mvl4y")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xul54")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pwjax")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_0w63t")

[node name="attackAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_lu2yu")
unit_size = 15.0
bus = &"Effects"
doppler_tracking = 2

[connection signal="body_entered" from="hand/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="hand/RigidBody3D" to="." method="_on_rigid_body_3d_body_entered"]
